// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressBookToken renders 1`] = `
<View
  accessibilityLabel="Recipient: Donald Trump"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "borderRadius": 15,
      "flexDirection": "row",
      "height": 30,
      "justifyContent": "center",
      "marginRight": 6,
      "marginVertical": 4,
      "paddingLeft": 2,
      "paddingRight": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
    testID="message-recipient.1.label"
  >
    Donald Trump
  </Text>
  <TouchableOpacity
    accessibilityLabel="Delete recipient Donald Trump"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "marginRight": -8,
        "padding": 8,
      }
    }
    testID="message-recipient.1.delete-btn"
  >
    <Image
      source={
        Object {
          "uri": "xLine",
        }
      }
      style={
        Object {
          "height": 12,
          "tintColor": "#2D3B45",
          "width": 12,
        }
      }
    />
  </TouchableOpacity>
</View>
`;

exports[`AddressBookToken renders with avatar url 1`] = `
<View
  accessibilityLabel="Recipient: Donald Trump"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "borderRadius": 15,
      "flexDirection": "row",
      "height": 30,
      "justifyContent": "center",
      "marginRight": 6,
      "marginVertical": 4,
      "paddingLeft": 2,
      "paddingRight": 12,
    }
  }
>
  <View
    accessibilityLabel=""
    style={
      Array [
        Object {
          "overflow": "hidden",
        },
        Object {
          "backgroundColor": "#F5F5F5",
          "borderRadius": 12,
          "height": 24,
          "width": 24,
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "http://www.fillmurray.com/100/100",
        }
      }
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Object {
          "marginLeft": 8,
        },
      ]
    }
    testID="message-recipient.1.label"
  >
    Donald Trump
  </Text>
  <TouchableOpacity
    accessibilityLabel="Delete recipient Donald Trump"
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    onPress={[Function]}
    style={
      Object {
        "marginRight": -8,
        "padding": 8,
      }
    }
    testID="message-recipient.1.delete-btn"
  >
    <Image
      source={
        Object {
          "uri": "xLine",
        }
      }
      style={
        Object {
          "height": 12,
          "tintColor": "#2D3B45",
          "width": 12,
        }
      }
    />
  </TouchableOpacity>
</View>
`;
